Reverted `.` to `@` as the property reference operator